sonarqube/sonar-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name:  sonar-deployment
  namespace: cicd
  labels:
    app:  sonar-deployment
spec:
  selector:
    matchLabels:
      app: sonar-deployment
  replicas: 1
  template:
    metadata:
      labels:
        app:  sonar-deployment
    spec:
      containers:
      - name:  sonar-deployment
        image:  sonarqube:lts
        resources:
          requests:
            cpu: 2000m
            memory: 2048Mi
          limits:
            cpu: 2000m
            memory: 2048Mi
        ports:
        - containerPort: 9000
        volumeMounts:
        - mountPath: /etc/localtime
          name: localtime
        - mountPath: /opt/sonarqube/conf
          name: sonar-storage
          subPath: conf
        - mountPath: /opt/sonarqube/data
          name: sonar-storage
          subPath: data
        - mountPath: /opt/sonarqube/extensions
          name: sonar-storage
          subPath: extensions
      volumes:
        - name: localtime
          hostPath:
            path: /usr/share/zoneinfo/Asia/Shanghai
        - name: sonar-storage
          persistentVolumeClaim:
            claimName: sonar-storage
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: sonarqube
  namespace: cicd
  labels:
    app: sonarqube
spec:
  ports:
  - name: sonarqube
    port: 9000
    targetPort: 9000
    protocol: TCP
  selector:
    app: sonar-deployment
